[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Boss/step2.png" type="Texture" id=1]
[ext_resource path="res://Assets/Boss/Boss.png" type="Texture" id=2]
[ext_resource path="res://Assets/Boss/step1.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Boss.gd" type="Script" id=4]
[ext_resource path="res://Actors/UI/BossHp.tscn" type="PackedScene" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 1 ) ],
"loop": true,
"name": "walking",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 85.5298

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 49.2241, 73.6664 )

[node name="Boss" type="KinematicBody2D"]
scale = Vector2( 0.2, 0.2 )
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionHead" type="CollisionShape2D" parent="."]
position = Vector2( 0, -66.0011 )
shape = SubResource( 2 )

[node name="CollisionBody" type="CollisionShape2D" parent="."]
position = Vector2( 0.594604, 74.9202 )
shape = SubResource( 3 )

[node name="BossHp" parent="." instance=ExtResource( 5 )]
margin_left = -93.9475
margin_top = -192.652
margin_right = -93.9475
margin_bottom = -192.652

[node name="WalkTimer" type="Timer" parent="."]
autostart = true

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="WalkTimer" to="." method="_on_WalkTimer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
